# GCMEncryption

./: CMakeLists.txt  README.md  idf_component.yml  library.json  library.properties
.github/workflows/: arduino_cli.yaml  esp_upload_component.yaml  espidf.yaml  platformio.yaml  platformio_publish.yaml
examples/arduino/integration/: integration.ino
examples/espidf/integration/main/: idf_component.yml  main.cpp
src/: GCMEncryption.h
src/impl/: GCMEncryption.cpp
